--- a/RMDesktopUI/Views/ShellView.xaml
+++ b/RMDesktopUI/Views/ShellView.xaml
@@ -10,7 +10,9 @@
         <Menu DockPanel.Dock="Top" FontSize="18">
             <MenuItem Header="_File">
                 <MenuItem x:Name="ExitApplication" Header="E_xit" />
-
+            </MenuItem>
+            <MenuItem Header="_Users">
+                <MenuItem x:Name="UserManagement" Header="_UserManagement" />
             </MenuItem>
             <MenuItem Header="_Account" Visibility="{Binding IsLoggedIn, Converter={StaticResource BooleanToVisibilityConverter}, FallbackValue=Collapsed}">
                 <MenuItem x:Name="LogOut" Header="_Log Out" />
